--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
     "nodemon": "^3.1.4",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "toastr": "^2.1.4"
   }
 }
