--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.4",
-        "yoeunes/toastr": "^2.3"
+        "laravel/ui": "^4.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
