--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^3.0",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.4"
+        "laravel/ui": "^4.4",
+        "php-flasher/flasher-laravel": "^1.15"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
