--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
+        "maatwebsite/excel": "^3.1",
         "php-flasher/flasher-laravel": "^1.15",
         "yoeunes/toastr": "^2.3"
     },
